Fixed Style For Firefox
Title textarea was too tall and was overflowing the div

--- a/styles/card.css
+++ b/styles/card.css
@@ -41,6 +41,10 @@
     padding-right: 4px;
 }
 
+.title {
+    height: 16px;
+}
+
 .card_body {
     margin: 8px;
 }
